--- a/css/_common.scss
+++ b/css/_common.scss
@@ -10,3 +10,41 @@ body {
 		padding: 0;
 	}
 }
+
+.experience-element {
+	margin: 30px 0;
+
+	&__logo-wrapper {
+		text-align: right;
+		img {
+			max-width: 100%;
+		}
+		@media (max-width: 767px) {
+			text-align: left;
+		}
+	}
+}
+
+.panel-recommendations {
+	blockquote {
+		font-size: 1em;
+	}
+}
+
+.panel-certificates {
+	.thumbnail {
+		margin-bottom: 10px;
+		width: 150px;
+		.caption {
+			padding: 0;
+		}
+		p {
+			margin: 0;
+		}
+	}
+	&__wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+}
