#! add custom-input project; add new job;

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -16,7 +16,7 @@ body {
 	&__logo-wrapper {
 		text-align: right;
 		img {
-			max-width: 100%;
+			max-width: 160px;
 		}
 		@media (max-width: 767px) {
 			text-align: left;
