--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -22,11 +22,11 @@
 				}
 			}
 
-			&._vk {
+			&._twitter {
 				&:hover {
 					svg {
 						* {
-							fill: #4e7293;
+							fill: #60aadd;
 						}
 					}
 				}
