add htmlacademy article

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ section {
 
 .article-element {
     text-align: left;
+    margin: 10px 0;
 }
 .article-element .icon,
 .article-element .link {
